# flask-htmx-skeleton

./: README.md  pyproject.toml
src/: app.py
